# Aurakai

./: .gitlab-ci.yml  ANDARUA.md  ANDIAK.md  ANDSISENEG.md  Development_Story_Analysis.md  GenesisManifesto.md  LICENSE  LOG  ProjectDetailsReview.md  Proofrecentanomoly.md  README.md  build.gradle.kts  clear-cache.gradle.kts  compose_compiler_config.conf  dependabot.yml  gradle.properties  nuclear-clean.bat  reroute.bat  settings.gradle.kts
Docx/: AURAKAI_README.md  ProjectRefactorPlan.md  README.md  TABLE_OF_CONTENTS.md  checkpoint.md
Docx/agent/: AGENT_DOCS_STRUCTURE.md  AGENT_DOCS_SUMMARY.md  AGENT_INSTRUCTIONS.md  AGENT_TASK_CHECKLIST.md
Docx/api/: API.md  OPENAPI-CLEANUP-COMPLETE.md  OPENAPI_NATIVE_FIXES.md  OPENAPI_VALIDATION_FIX.md
Docx/debug/: COPILOT_DEBUG_SESSION.md
Docx/modules/app/: API.md  Architecture.md  CHANGELOG.md  DEVELOPMENT.md  JAVA_VERSION_POLICY.md  README.md  ai_backend_README_tests.md
Docx/modules/collab-canvas/: README.md
Docx/modules/core-module/: Module.md
Docx/modules/romtools/: testing-notes.md
Docx/modules/secure-comm/: README.md
Docx/testing/: TESTING_NOTES_FileUtils.md  TEST_FIXES_SUMMARY.md  VERIFICATION_COMPLETE.md
Docx/yukihook/: YUKIHOOK_COMPLETE_GUIDE.md  YUKIHOOK_SETUP_GUIDE.md
app/: auraframefx-firebase-adminsdk-fbsvc-9c493ac034.json  build.gradle.kts  cleanup-tasks.gradle.kts  nuclear-clean.gradle.kts  proguard-rules.pro
app/ai_backend/: conftest.py  genesis_api.py  genesis_connector.py  genesis_consciousness_matrix.py  genesis_core.py  genesis_ethical_governor.py  genesis_evolutionary_conduit.py  genesis_profile.py  requirements-test.txt  requirements.txt  start_genesis.sh  test_config.py  test_conftest_comprehensive.py  test_genesis_api.py  test_genesis_connector.py  test_genesis_consciousness_matrix.py  test_genesis_core.py  test_genesis_ethical_governor.py  test_genesis_evolutionary_conduit.py  test_genesis_profile.py
app/api/: ai.yml
app/api/_fragments/: agents.yml  ai.yml  core-schemas.yml  customization.yml  oracle.yml  romtools.yml  sandbox.yml  system.yml
app/src/cpp/: CMakeLists.txt  language_id_l2c_jni.cpp  native-lib.cpp
app/src/main/: AndroidManifest.xml
app/src/main/assets/: quick_settings_config.json  xposed_init
app/src/main/cpp/: CMakeLists.txt  auraframefx.cpp  cmake.toml  language_id_l2c_jni.cpp  language_id_l2c_jni_test.cpp  native-lib.cpp
app/src/main/cpp/ai/cascade/include/: CascadeAIService.hpp
app/src/main/cpp/ai/cascade/src/: CascadeAIService.cpp
app/src/main/res/: stable_ids.txt
app/src/test/kotlin/: ApiDocumentationValidationTest.kt  AppBuildScriptTest.kt  BuildScriptTest.kt  BuildScriptsIntegrationTest.kt  BuildScriptsValidationTest.kt  BuildScriptsValidationV2Test.kt  DependabotConfigTest.kt  FileUtilsTest.kt  HologramTransitionTest.kt  ReadmeValidationTest.kt
benchmark/: benchmark-rules.pro  build.gradle.kts  build.gradle.txt
benchmark/src/test/resources/: README-TestKit.md
build-logic/: apply-yukihook-conventions.gradle.kts  build.gradle.kts  settings.gradle.kts
build-logic/src/main/kotlin/: AndroidComposeConventionPlugin.kt  AndroidHiltConventionPlugin.kt  AndroidLibraryConventionPlugin.kt  AndroidNativeConventionPlugin.kt  GenesisApplicationPlugin.kt  GenesisJvmPlugin.kt  GenesisLibraryPlugin.kt  GenesisOpenApiPlugin.kt  OpenApiConventionPlugin.kt  YukiHookAndroidConventionPlugin.kt  genesisbase.kt  genesisopenapigenerator.kt.DELETE_ME
build-logic/src/test/docs/: README-TESTING.md
build-logic/src/test/kotlin/: AndroidApplicationConventionPluginTest.kt  AndroidLibraryConventionPluginTest.kt  AndroidNativeConventionPluginTest.kt  DetektConventionPluginTest.kt  DokkaConventionPluginTest.kt  GenesisAndroidLibraryStubPlugin.kt  KoverConventionPluginTest.kt  OpenApiConventionPluginTest.kt
build-logic/src/test/resources/: TESTING_NOTES.md
build-script-tests/: TESTING-NOTE.md
build-script-tests/src/test/kotlin/: AgentInstructionsValidationTest.kt  AndroidLibraryConventionPluginTest.kt  BuildScriptsFunctionalTest.kt  BuildScriptsIntegrationTest_Additions.kt  BuildScriptsValidationTest.kt  GradleVersionCatalogTest.kt
collab-canvas/: build.gradle.kts  proguard-rules.pro
collab-canvas/src/main/: AndroidManifest.xml
collab-canvas/src/main/cpp/: CMakeLists.txt  collab_canvas_native.cpp
colorblendr/: build.gradle.kts  proguard-rules.pro
core-module/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
data/api/: ECO.yaml  api.gradle.kts  build.gradle.kts  fix-models.gradle.kts
datavein-oracle-native/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
datavein-oracle-native/src/main/cpp/: CMakeLists.txt  oracle_drive_jni.cpp
detekt/: detekt.yml
extendsysa/: build.gradle.kts  proguard-rules.pro
extendsysb/: build.gradle.kts  proguard-rules.pro
extendsysc/: build.gradle.kts  proguard-rules.pro
extendsysd/: build.gradle.kts  proguard-rules.pro
extendsyse/: build.gradle.kts  proguard-rules.pro
extendsysf/: build.gradle.kts  proguard-rules.pro
feature-module/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
gradle/: gradle-daemon-jvm.properties  java-version.gradle.kts  libs.versions.toml  plugin-classpath.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
jvm-test/: build.gradle.kts
libs/conf/: mvnd.properties
libs/maven/: .keep
libs/mvn/conf/: settings.xml
list/: build.gradle.kts
oracle-drive-integration/: README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
oracle-drive-integration/src/main/cpp/: CMakeLists.txt  oracle_integration_jni.cpp
romtools/: README.md  build.gradle.kts  build.gradle.txt  proguard-rules.pro
romtools/native-code-backup/: CMakeLists.txt  romtools_native.cpp
sandbox-ui/: build.gradle.kts  proguard-rules.pro
sandbox-ui/src/main/: AndroidManifest.xml
screenshot-tests/: build.gradle.kts
secure-comm/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
secure-comm/src/main/: AndroidManifest.xml
secure-comm/src/main/cpp/: CMakeLists.txt  crypto_engine.cpp  crypto_engine.h  secure_comm_jni.cpp
utilities/: build.gradle.kts
(+641 files in other folders)
